# rabbitmq_fake_email_sender

./: .gitignore  README.md  pyproject.toml
fake_email_sender_rabbitmq/: connect.py  consumer.py  models.py  producer.py
