[tool.poetry]
name = "fake-email-sender-rabbitmq"
version = "0.1.0"
description = ""
authors = ["Cheburator <sashadanilenko06@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pika = "^1.3.2"
mongoengine = "^0.27.0"
faker = "^19.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
